# IOSEE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  TODO.md  VERSION.md
cmake/: BuildMessages.cmake  CompilerFlagsCray.cmake  CompilerFlagsGNU.cmake  CompilerFlagsIntel.cmake  CompilerFlagsIntelLLVM.cmake  FindNetCDF.cmake  SystemDetection.cmake
data/: README.md  effective_view_angle.nc  normal_view_angle.nc  water_optical_constants_HQ_SE.nc  water_optical_constants_HQ_full.nc
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  architecture_overview.md
docs/config_case/: narrow_band_option2.config  spectral_option1.config  spectral_option1_polarized_wl.config  spectral_option1_sensitivity_full_.config  spectral_option2.config  spectral_option2_polarized_wl.config  spectral_option2_rrtmg.config  spectral_option2_wl.config
docs/physics/: README.md  physics_deep_dive.md
docs/user_guide/: configurable_flag.docx  configuration.md  installation.md
examples/: narrow_band_option1.config  narrow_band_option2_rrtmg.config  run_all_examples.sh  run_narrow_band.sh  run_no_multiple_reflection.sh  run_polarized.sh  run_spectral.sh  run_spectral_full.sh  run_spectral_wavelength.sh  spectral_option1_polarized_wn.config  spectral_option1_sensitivity_full_temp.config  spectral_option1_wl.config  spectral_option2_polarized_wn.config  spectral_option2_test_smooth.config
lib/: configuration.F90  mathlib.F90  netcdf_handler.F90  save_output.F90  utils.F90
src/: driver.F90  ocean_emissivity.F90  sea_water_nk.F90
